jsinterop-ts-defs-processor/src/test/resources/errors/ctors/JsTypeWithSingleConstructors.java
package com.vertispan.tsdefs.types;

import jsinterop.annotations.*;

@JsType
public class JsTypeWithSingleConstructors {

    public JsTypeWithSingleConstructors(){
    }

}